--- a/src/w4/assignment/w4.html
+++ b/src/w4/assignment/w4.html
@@ -24,8 +24,8 @@
       }
       .container {
         max-width: 64em;
+        margin-inline: auto;
         background-color: #f1eee8;
-
         top: 1516px;
         left: -29px;
         padding: 32px;
