--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <li><a href="./src/w4/index.html">4주차</a></li>
       <li><a href="./src/w4/w4-2.html">4주차 두번째</a></li>
       <li><a href="./src/w4/assignment/w4.html">4주차 과제</a></li>
-      <li><a href="./src/w5/index.html">5주차</a></li>
       <li><a href="./src/w6/card/card.html">6주차</a></li>
-      <li><a href="./src/w6/flexBasic.html">flexBasic</a></li>
+      <li><a href="./src/w6/flexBasic.html">6주차 flexbasic</a></li>
+      <li><a href="./src/w7/stp1.html">7주차 flex</a></li>
     </ol>
   </body>
 </html>
