--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="./src/w6/card/card.html">6주차</a></li>
       <li><a href="./src/w6/flexBasic.html">6주차 flexbasic</a></li>
       <li><a href="./src/w7/stp1.html">7주차 flex</a></li>
+      <li><a href="./src/w7/assignment/index.html">7주차 과제</a></li>
     </ol>
   </body>
 </html>
