--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <li><a href="./src/w6/flexBasic.html">6주차 flexbasic</a></li>
       <li><a href="./src/w7/stp1.html">7주차 flex</a></li>
       <li><a href="./src/w7/assignment/index.html">7주차 과제</a></li>
+      <li><a href="./src/w8/assigmentDemo/index.html">8주차</a></li>
+      <li><a href="./src/w9/index.html">9주차</a></li>
     </ol>
   </body>
 </html>
