--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <li><a href="./src/w9/index.html">9주차</a></li>
       <li><a href="./src/w10/index.html">10주차</a></li>
       <li><a href="./src/w10/assignment/index.html">10주차 과제</a></li>
+      <li><a href="./src/w11/step1/index.html">11주차 step1</a></li>
+      <li><a href="./src/w11/step2/index.html">11주차 step2</a></li>
     </ol>
   </body>
 </html>
