--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       <li><a href="./src/w10/assignment/index.html">10주차 과제</a></li>
       <li><a href="./src/w11/step1/index.html">11주차 step1</a></li>
       <li><a href="./src/w11/step2/index.html">11주차 step2</a></li>
+      <li><a href="./src/w12/step1/index.html">12주차 step1</a></li>
+      <li><a href="./src/w12/step2/index.html">12주차 step2</a></li>
+      <li><a href="./src/w12/step3/index.html">12주차 step3</a></li>
+      <li><a href="./src/w12/step4/index.html">12주차 step4</a></li>
+      <li><a href="./src/w13/step1/index.html">13주차 step1</a></li>
+      <li><a href="./src/w13/step2/index.html">13주차 step2</a></li>
     </ol>
   </body>
 </html>
